--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         let bluebutton = document.querySelector("#bluebutton");
         let container = document.querySelector(".container");
         bluebutton.addEventListener("click",function () {
-            container.innerHTML = `<span style = 'font-size: 30px; display: inline-block;'> Для меня музыка - отдельное искусство, я люблю находить, слушать, представлять образы и на любое настроение у меня готова своя музыкальная подборка. Одну из таких вы слушаете сейчас. Это мое сырое восприятие этой весны - один домашний лайв <span>`;
+            container.innerHTML = `<span style = 'font-size: 30px; display: inline-block;'> For me, music is a separate art, I like finding, listening, presenting images, and I have my own musical list ready for any mood. You are listening to one of these now. This is my raw perception of this spring - one homey set <span>`;
 
         });
         let audiobutton = document.querySelector("#redbutton");
