--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         body { 
             font-size: 150px;
             font-family: Arial, Helvetica, sans-serif;
+            Zoom: 100%;
+    padding-left: 3px; /* (16px * 1.20) * 0.15 */
+    padding-right: 3px;
         }
         a {
         font-size: 100px;
