--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <title>episode</title>
 </head>
 <body>
-    daily episode of your week 
+    Эпизод - это часть сюжета, имеющая самостоятельное повествовательное значение. Эпизод связан с основной темой сочинения, но закончен в себе и может быть выделен, как отдельное действие. В данном контексте, эпизод - это место созерцания отдельной музыкальной композиции с комментарием автора
 
-    <a href="#"  id="bluebutton" style="width: 100px;
-    height: 100px;
+    <a href="#"  id="bluebutton" style="width: 60px;
+    height: 60px;
     background:black;
     border-radius: 50%;
     display: inline-block;
     vertical-align: middle;"></a>
     <a href="#"  id="redbutton" style="width: 0;
     height: 0;
-    border-top: 50px solid transparent;
-    border-left: 100px solid black;
-    border-bottom: 50px solid transparent;
+    border-top: 30px solid transparent;
+    border-left: 60px solid black;
+    border-bottom: 30px solid transparent;
     display: inline-block;
     vertical-align: middle;"></a>
     <a href="#" id="bgbutton"></a>
@@ -27,14 +27,14 @@
     <div class="container"></div>
     <style>
         body { 
-            font-size: 150px;
+            font-size: 70px;
             font-family: Arial, Helvetica, sans-serif;
             Zoom: 100%;
     padding-left: 3px; /* (16px * 1.20) * 0.15 */
     padding-right: 3px;
         }
         a {
-        font-size: 100px;
+        font-size: 50px;
         line-height: normal;
         font-family: Pragmatica;
         color: white;
