--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,8 +27,14 @@
     <div class="container"></div>
     <style>
         body { 
+            
             font-size: 70px;
+            -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
             font-family: Arial, Helvetica, sans-serif;
+            text-align: justify;
+            
             Zoom: 100%;
     padding-left: 3px; /* (16px * 1.20) * 0.15 */
     padding-right: 3px;
