--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             -moz-hyphens: auto;
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
+    -moz-hyphenate-limit-chars: 6 3 2; /* not yet supported */
+-webkit-hyphenate-limit-chars: 6 3 2; /* not yet supported */
+-ms-hyphenate-limit-chars: 6 3 2;
+
             font-family: Arial, Helvetica, sans-serif;
             text-align: justify;
             
