--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         let bluebutton = document.querySelector("#bluebutton");
         let container = document.querySelector(".container");
         bluebutton.addEventListener("click",function () {
-            container.innerHTML = `<span style = 'font-size: 30px; display: inline-block;'> this one is a journey through Africa, South America, Soul, Funk and Disco and I hope it will bring sunshine in your day <span>`;
+            container.innerHTML = `<span style = 'font-size: 30px; display: flex;'> this one is a journey through Africa, South America, Soul, Funk and Disco and I hope it will bring sunshine in your day <span>`;
 
         });
         let audiobutton = document.querySelector("#redbutton");
