--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>Миша Колобов</p>
     
     <audio  src="song.mp3"></audio>
-    <p class="journey hidden">Михаил говоря о своем сете пользуется цитатой Андрея Горохов из музпросвета:
+    <p class="journey hidden">Михаил говоря о своем сете пользуется цитатой Андрея Горохова из музпросвета:
         "Народная музыка (и — хочется добавить — вся прочая тоже) — это не дело доброжелательных и миролюбивых болванов, взыскующих гармонии и всеобщей любви. Фольклор индивидуалистичен и трагичен, в этой музыке — боль, голые нервы и смерть. Это экзистенциальная музыка</p>
     <style>
         div { 
