--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <p></p>
     
     <audio  src="song.mp3"></audio>
-    <p class="journey hidden">Михаил говоря о своем сете пользуется цитатой Андрея Горохова из музпросвета:
-        "Народная музыка (и — хочется добавить — вся прочая тоже) — это не дело доброжелательных и миролюбивых болванов, взыскующих гармонии и всеобщей любви. Фольклор индивидуалистичен и трагичен, в этой музыке — боль, голые нервы и смерть. Это экзистенциальная музыка</p>
+    <p class="journey hidden">В этом сете я особо не свожу - ставил трек в трек. Поскольку музыка иногда - это чистый кайф и не нужно ее править)</p>
   
     <script>
         
