--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
     <text class="stil" x="100"
           y="100"
-          fill="white"
+          fill="black"
           text-anchor="middle"
           alignment-baseline="middle"
           >
