--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="eng">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,">
     <title>episode </title>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
+    
 </head>
 <body>
   <svg style='width: 100%; height: 100%; position:absolute;'>
     <line x1="0" y1="100%" x2="100%" y2="0"
         style="stroke:rgb(0,0,0);stroke-width:1"/>
 </svg>
-<div class="header">episode </div>
+<div class="wrapper">episode </div>
     
 <div class="href">
 
