--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    
     
     <audio  src="song.mp3"></audio>
-    <p class="journey hidden">могу сказать: сеты все собираю как сюжетную историю, этот не исключение. хочется сделать микс живым, движущимся развивающимся. есть также и более статичные моменты для контрастности, которые снова сменяются динамикой, иногда все ломается, но потом сннова слбирается в целое</p>
+    <p class="journey hidden">могу сказать: сеты все собираю как сюжетную историю, этот не исключение. хочется сделать микс живым, движущимся развивающимся. есть также и более статичные моменты для контрастности, которые снова сменяются динамикой, иногда все ломается, но потом снова собирается в целое</p>
   
     <script>
         
