--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           text-anchor="middle"
           alignment-baseline="middle"
           >
-      16  
+      17  
     </text>
     </a>
         </svg>
 </div>
-        <span>lovaoya</span>
+        <span>bohemia</span>
    
     
     
