--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    
     
     <audio  src="song.mp3"></audio>
-    <p class="journey hidden">Сет был записан в разгар карантина, когда все в той или иной мере были в изоляции. Вся эта атмосфера действовала на психику, и когда мы решили сделать стрим из квартиры, я поняла, что хочу поиграть что-то достаточно быстрое и вводящее в танцевальный транс — такой домашний микро-рейв, на котором можно забыть обо всём. Впрочем, ощущения вёсны 2020 тоже хотелось обозначить, так что сет начинается с трека “COVID-19” от Bergsonist — классной нью-йоркской исполнительницы родом из Марокко.</p>
+    <p class="journey hidden"></p>
   
     <script>
         
