--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    
     
     <audio  src="song.mp3"></audio>
-    <p class="journey hidden">Echo of memories
+    <p class="journey hidden">Echo of memories.
       Appeal to your feelings</p>
   
     <script>
