--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 </head>   
 <body>
  <audio id="audioPlayer" src="" ></audio>
+ <div> 
+    <button class="play" onclick="document.getElementById('audioPlayer').play()"></button> 
+    <button class="pause" onclick="document.getElementById('audioPlayer').pause()"></button> 
+    
+  </div>
 
  <ul id="playlist">
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/Gu9bHKBG_x1O6g">bohemia</a></li>
+     <li><a href="https://www.dropbox.com/s/0ddh146ncxgb9mp/1.mp3?dl=1">bohemia</a></li>
      <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/M9NsauBMoSxO5Q">Миша Колобов</a></li>
      <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/Ef4KTZIUS4Wusg">Женя Болгов</a></li>
      <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/RXoyJM1VOgg9Og">M.Gaidamaka</a></li>
@@ -37,11 +42,7 @@
      <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/dfzgtudpvmLGMw">Errortica</a></li>
      <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/PUVyfYPe6aC6sA">AERE</a></li>
  </ul>
- <div> 
-  <button class="play" onclick="document.getElementById('audioPlayer').play()"></button> 
-  <button class="pause" onclick="document.getElementById('audioPlayer').pause()"></button> 
-  
-</div>
+ 
  <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
  <script src="audioPlayer.js"></script>
 
