--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
  <ul id="playlist">
      <li><a href="https://www.dropbox.com/s/0ddh146ncxgb9mp/1.mp3?dl=1">bohemia</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/M9NsauBMoSxO5Q">Миша Колобов</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/Ef4KTZIUS4Wusg">Женя Болгов</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/RXoyJM1VOgg9Og">M.Gaidamaka</a></li>
+     <li><a href="https://www.dropbox.com/s/35zbpmzd99lfyal/2.mp3?dl=1">Миша Колобов</a></li>
+     <li><a href="https://www.dropbox.com/s/ricgyqs1zh7syea/3.mp3?dl=1">Женя Болгов</a></li>
+     <li><a href="https://www.dropbox.com/s/9iutfz8chocao99/4.mp4?dl=1">M.Gaidamaka</a></li>
      <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/_qAkqQGdq2SecA">Baster Jazzster</a></li>
      <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/3z1wQ7Njl18KcQ">frrra</a></li>
      <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/5HjAPuXOqNa3hg">хаос.mp3</a></li>
