--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
      <li><a href="https://www.dropbox.com/s/35zbpmzd99lfyal/2.mp3?dl=1">Миша Колобов</a></li>
      <li><a href="https://www.dropbox.com/s/ricgyqs1zh7syea/3.mp3?dl=1">Женя Болгов</a></li>
      <li><a href="https://www.dropbox.com/s/9iutfz8chocao99/4.mp4?dl=1">M.Gaidamaka</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/_qAkqQGdq2SecA">Baster Jazzster</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/3z1wQ7Njl18KcQ">frrra</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/5HjAPuXOqNa3hg">хаос.mp3</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/Q3s6BuojLAGJ0w">Roma Khleb</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/HFWbOqy1VJ8JQQ">Stepan Yakushev</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/ZP9JCRPccT0inA">Misha Sultan</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/jG1B9p9aWHL98A">Vaden</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/rzYmMcJ8IB6T5Q">Monowave</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/7VQXhsNrfaSNvg">EtoEto</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/fLB941KTZ_sT_A">Petr Tiagunin</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/bMrJktAaH613vw">Sestrica</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/LekL-B6aYpX8oA">lovaoya</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/nTaJWMGQl9n9hA">bohemia</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/erJ542W-HxVi2w">u h</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/ivKXekidHVBMgg">Rekk&Kutoboy</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/sOkB5UcCngdP3w">Kot Ag4t</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/gjdyVkV2TVLoZg">Broken Composers</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/_7dOTsGv7kRCQw">Danya Samylkin</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/dfzgtudpvmLGMw">Errortica</a></li>
-     <li><a href="https://getfile.dokpub.com/yandex/get/https://yadi.sk/d/PUVyfYPe6aC6sA">AERE</a></li>
+     <li><a href="https://www.dropbox.com/s/v5ix0ggzuzjad7x/5.mp3?dl=1">Baster Jazzster</a></li>
+     <li><a href="https://www.dropbox.com/s/nisq9y3cpxxvc8f/6.mp3?dl=1">frrra</a></li>
+     <li><a href="https://www.dropbox.com/s/enwvbj5sckjgkh5/7.mp3?dl=1">хаос.mp3</a></li>
+     <li><a href="https://www.dropbox.com/s/j6gto63cnkpz6f5/8.mp3?dl=1">Roma Khleb</a></li>
+     <li><a href="https://www.dropbox.com/s/zkm02l6wvngv8q3/9.mp3?dl=1">Stepan Yakushev</a></li>
+     <li><a href="https://www.dropbox.com/s/tdr1ga2asnizib4/10.mp3?dl=1">Misha Sultan</a></li>
+     <li><a href="https://www.dropbox.com/s/hgjmxd2h082n3r6/11.mp3?dl=1">Vaden</a></li>
+     <li><a href="https://www.dropbox.com/s/kr4g52z801u1t7i/12.mp3?dl=1">Monowave</a></li>
+     <li><a href="https://www.dropbox.com/s/r46yx8130n2nhwg/13.mp3?dl=1">EtoEto</a></li>
+     <li><a href="https://www.dropbox.com/s/vjc7shw7wr1iqa6/14.mp3?dl=1">Petr Tiagunin</a></li>
+     <li><a href="https://www.dropbox.com/s/74b9pgo9g92f86q/15.mp3?dl=1">Sestrica</a></li>
+     <li><a href="https://www.dropbox.com/s/erzjnuo9374fi45/16.mp3?dl=1">lovaoya</a></li>
+     <li><a href="https://www.dropbox.com/s/tjxj4a35xm4q5v4/17.mp3?dl=1">bohemia</a></li>
+     <li><a href="https://www.dropbox.com/s/kddmpokyd1o6oje/18.mp3?dl=1">u h</a></li>
+     <li><a href="https://www.dropbox.com/s/1ffrsbnat4y3f7m/19.mp3?dl=1">Rekk&Kutoboy</a></li>
+     <li><a href="https://www.dropbox.com/s/ifj3fjdph86i0hk/20.mp3?dl=1">Kot Ag4t</a></li>
+     <li><a href="https://www.dropbox.com/s/o67h2s37n31qdce/21.mp3?dl=1">Broken Composers</a></li>
+     <li><a href="https://www.dropbox.com/s/io5vpa58he3y27b/22.mp3?dl=1">Danya Samylkin</a></li>
+     <li><a href="https://www.dropbox.com/s/zcocv48b4php7tj/23.mp3?dl=1">Errortica</a></li>
+     <li><a href="https://www.dropbox.com/s/qnvxggsv2xypwxx/24.mp3?dl=1">AERE</a></li>
  </ul>
  
  <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
