--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
  <audio id="audioPlayer" src="" ></audio>
  <div> 
-    <button class="play" onclick="document.getElementById('audioPlayer').play()"></button> 
-    <button class="pause" onclick="document.getElementById('audioPlayer').pause()"></button> 
+    <button class="play" onclick="document.getElementById('audioPlayer').play()">PLAY</button> 
+    <button class="pause" onclick="document.getElementById('audioPlayer').pause()">PAUSE</button> 
     
     
   </div>
