--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     
   </div>
-
+<div>
  <ul id="playlist">
      <li><a href="https://www.dropbox.com/s/0ddh146ncxgb9mp/1.mp3?dl=1">bohemia</a></li>
      <li><a href="https://www.dropbox.com/s/35zbpmzd99lfyal/2.mp3?dl=1">Миша Колобов</a></li>
@@ -43,7 +43,7 @@
      <li><a href="https://www.dropbox.com/s/zcocv48b4php7tj/23.mp3?dl=1">Errortica</a></li>
      <li><a href="https://www.dropbox.com/s/qnvxggsv2xypwxx/24.mp3?dl=1">AERE</a></li>
  </ul>
- 
+</div>
  <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
  <script src="audioPlayer.js"></script>
 
