--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  </ul>
  <p>&nbsp;</p>
  <p>
-     @episode.today
+     24/24 @episode.today<br> Stay tuned
  </p>
 
  <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
